syntax = "proto3";

package ON.Fragments.Authorization.Payment.Paypal;

import "Protos/ON/Fragments/Authorization/Payment/Paypal/PaypalSubscriptionRecord.proto";

// Service for Paypal backup fragment interface
service BackupInterface {
  // Export a list of all data.
  rpc BackupAllData (BackupAllDataRequest) returns (stream BackupAllDataResponse) {}

  // Restore a list of all data.
  rpc RestoreAllData (stream RestoreAllDataRequest) returns (RestoreAllDataResponse) {}
}
  
message BackupAllDataRequest {
  string ClientPublicJwk = 1;
}

message BackupAllDataResponse {
  oneof Response_oneof {
    string ServerPublicJwk = 1;
    EncryptedSubscriptionBackupDataRecord EncryptedRecord = 10;
  }
}

message EncryptedSubscriptionBackupDataRecord {
  bytes EncryptionIV = 1;
  bytes Data = 10;
}

message RestoreAllDataRequest {
  oneof Request_oneof {
    RestoreMode Mode = 1;
    SubscriptionBackupDataRecord Record = 10;
  }

  enum RestoreMode {
    Wipe = 0;         // Wipe entire user database and restore users.  Any new users will be deleted.
    Overwrite = 1;    // Overwrite all records with corresponding record.  Will not delete new records not in list.
    MissingOnly = 2;  // Only restore missing user records.  Will not overwrite user records that already exist.
  }
}

message RestoreAllDataResponse {
  int32 NumSubscriptionsRestored = 1;
  int32 NumSubscriptionsSkipped = 2;
  int32 NumSubscriptionsOverwriten = 3;
  int32 NumSubscriptionsWiped = 4;
}

message SubscriptionBackupDataRecord {
  bytes ExtraData = 1;   // Generic byte structure to save all application specific data for user
  PaypalSubscriptionFullRecord SubscriptionFullRecord = 2; // SubscriptionRecord
}